--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProjetJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mariadb-java-client-2.5.4.jar=C:\\Users\\kenny\\Desktop\\mariadb-java-client-2.5.4.jar
+file.reference.mariadb-java-client-2.5.4.jar-1=lib\\mariadb-java-client-2.5.4.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar=lib\\mysql-connector-java-5.1.49-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.49-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}:\
+    ${file.reference.mariadb-java-client-2.5.4.jar}:\
+    ${file.reference.mariadb-java-client-2.5.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
